[package]
name = "nyx"
version = "2.1.0"
authors = ["evenorog <evenorog@gmail.com>"]
description = "Small no-std implementation of the TOTP algorithm."
documentation = "https://docs.rs/nyx"
repository = "https://github.com/evenorog/nyx"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["totp"]
categories = ["authentication", "no-std"]
exclude = ["/.travis.yml"]
edition = "2018"

[dependencies]
hmac = { version = "0.10", default-features = false }
sha-1 = { version = "0.9", default-features = false }
