[package]
name = "nyx"
version = "2.2.3"
authors = ["evenorog <evenorog@gmail.com>"]
description = "A no-std implementation of the TOTP algorithm."
documentation = "https://docs.rs/nyx"
repository = "https://github.com/evenorog/nyx"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["totp"]
categories = ["authentication", "no-std"]
edition = "2024"

[dependencies]
hmac = { version = "0.12", default-features = false }
sha1 = { version = "0.10", default-features = false }

[badges]
maintenance = { status = "actively-developed" }
